repos/emily-python/contents/test/parser/fail/importSingle.em
# Import lone symbol

# Arg: --ast2
# Expect failure

import a
